# Sekai

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG-next.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.debian  Dockerfile.debian.ci  Justfile  README.md  SECURITY.md  TRANSLATIONS.md  clippy.toml  deny.toml  docker-compose.yml  install.sh  release-plz.toml  setup.bat
.claude/skills/changelog-generation/: SKILL.md
.claude/skills/github-issue/: SKILL.md
.claude/skills/github-issue-triage/: SKILL.md
.claude/skills/github-pr/: SKILL.md
.claude/skills/github-pr-review-session/: SKILL.md
.claude/skills/sekai/: SKILL.md
.gemini/: style-guide.md
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  discord-release.yml  docs-deploy.yml  master-branch-flow.md  pub-aur.yml  pub-homebrew-core.yml  pub-scoop.yml  release-stable-manual.yml  sync-marketplace-templates.yml  tweet-release.yml
apps/tauri/: Cargo.toml  Info.plist  TESTING.md  tauri.conf.json
benches/: agent_benchmarks.rs
crates/aardvark-sys/: Cargo.toml
crates/robot-kit/: Cargo.toml  PI5_SETUP.md  README.md  robot.toml
crates/sekai-api/: Cargo.toml
crates/sekai-channels/: Cargo.toml
crates/sekai-config/: Cargo.toml
crates/sekai-gateway/: Cargo.toml
crates/sekai-gateway/src/: acp.rs  api.rs  api_config.rs  api_onboard.rs  api_personality.rs  api_plugins.rs  api_webauthn.rs  canvas.rs  hardware_context.rs  lib.rs  node_tool.rs  nodes.rs  openapi.rs  openapi_docs.html  sse.rs  static_files.rs  tls.rs  voice_duplex.rs  ws.rs  ws_approval.rs
crates/sekai-hardware/: Cargo.toml
crates/sekai-infra/: Cargo.toml
crates/sekai-macros/: Cargo.toml
crates/sekai-memory/: Cargo.toml
crates/sekai-plugins/: AGENTS.md  Cargo.toml
crates/sekai-providers/: Cargo.toml
crates/sekai-runtime/: AGENTS.md  Cargo.toml
crates/sekai-tool-call-parser/: Cargo.toml
crates/sekai-tools/: Cargo.toml
crates/sekai-tui/: Cargo.toml
deploy-k8s/: README.md  configmap-sample.yaml  deployment-sample.yaml  namespace-sample.yaml  route-sample.yaml  secret-sample.yaml  service-sample.yaml
dev/: README.md  ci.sh  cli.sh  config.harness-test.toml  config.template.toml  docker-compose.ci.yml  docker-compose.yml  recompute_contributor_tiers.sh  run-tauri-dev.sh  test-harness.sh  test-registry-skills.sh  test-termux-release.sh  test-tui-onboarding.sh
docs/book/: book.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_command_validation.rs
marketplace/: README.md  sync-marketplace-templates.yml
marketplace/coolify/: sekai.yaml
marketplace/dokploy/: meta-entry.json
marketplace/easypanel/: index.ts  meta.yaml
nix/: README.md  module.nix  test.nix
plugins/image-gen-fal/: Cargo.toml  manifest.toml
scripts/: README.md  deploy-rpi.sh  rpi-config.toml
scripts/release/: bump-version.sh  cut_release_tag.sh
src/: cli_input.rs  i18n.rs  identity.rs  lib.rs  main.rs  migration.rs  multimodal.rs  schema_markdown.rs  util.rs
src/agent/: mod.rs
src/approval/: mod.rs
src/auth/: mod.rs
src/channels/: bluesky.rs  clawdtalk.rs  debounce.rs  dingtalk.rs  discord.rs  discord_history.rs  email_channel.rs  gmail_push.rs  imessage.rs  irc.rs  lark.rs  link_enricher.rs  linq.rs  matrix.rs  mattermost.rs  mochat.rs  mod.rs  nextcloud_talk.rs  nostr.rs  notion.rs  qq.rs  reddit.rs  session_backend.rs  session_sqlite.rs  session_store.rs  signal.rs  slack.rs  stall_watchdog.rs  telegram.rs  transcription.rs  tts.rs  twitter.rs  voice_call.rs  voice_wake.rs  wati.rs  webhook.rs  wecom.rs  whatsapp.rs  whatsapp_storage.rs  whatsapp_web.rs
src/commands/: self_test.rs  update.rs
src/config/: mod.rs  schema.rs  traits.rs  workspace.rs
src/cost/: mod.rs
src/cron/: mod.rs
src/daemon/: mod.rs
src/doctor/: mod.rs
src/gateway/: mod.rs
src/hands/: types.rs
src/hardware/: mod.rs
src/health/: mod.rs
src/heartbeat/: mod.rs
src/hooks/: mod.rs
src/integrations/: mod.rs
src/memory/: cli.rs  mod.rs  traits.rs
src/nodes/: mod.rs
src/observability/: mod.rs
src/peripherals/: mod.rs
src/platform/: mod.rs
src/plugins/: mod.rs
src/providers/: mod.rs  traits.rs
src/rag/: mod.rs
src/routines/: mod.rs
src/security/: mod.rs
src/service/: mod.rs
src/skillforge/: mod.rs
src/skills/: mod.rs
src/sop/: mod.rs
src/tools/: ask_user.rs  backup_tool.rs  browser.rs  browser_delegate.rs  browser_open.rs  calculator.rs  canvas.rs  claude_code.rs  claude_code_runner.rs  cli_discovery.rs  cloud_ops.rs  cloud_patterns.rs  codex_cli.rs  composio.rs  content_search.rs  data_management.rs  discord_search.rs  escalate.rs  file_edit.rs  file_write.rs  gemini_cli.rs  git_operations.rs  glob_search.rs  google_workspace.rs  hardware_board_info.rs  hardware_memory_map.rs  hardware_memory_read.rs  http_request.rs  image_gen.rs  image_info.rs  jira_tool.rs  knowledge_tool.rs  linkedin.rs  linkedin_client.rs  llm_task.rs  mcp_client.rs  mcp_deferred.rs  mcp_protocol.rs  mcp_tool.rs  mcp_transport.rs  (+31 more)
src/trust/: mod.rs
src/tunnel/: mod.rs
src/verifiable_intent/: mod.rs
tests/component/: config_migration.rs  config_persistence.rs  config_schema.rs  dockerignore_test.rs  gateway.rs  gemini_capabilities.rs  otel_dependency_feature_regression.rs  provider_resolution.rs  provider_schema.rs  security.rs  whatsapp_webhook_security.rs
tests/integration/: agent.rs  agent_robustness.rs  backup_cron_scheduling.rs  channel_matrix.rs  channel_routing.rs  email_attachments.rs  hooks.rs  memory_comparison.rs  memory_loop_continuity.rs  memory_restart.rs  report_template_tool_test.rs  telegram_attachment_fallback.rs  telegram_finalize_draft.rs
tests/live/: gemini_fallback_oauth_refresh.rs  openai_codex_vision_e2e.rs  providers.rs  zai_jwt_auth.rs
tests/support/: helpers.rs  mock_channel.rs  mock_provider.rs  mock_tools.rs
tests/system/: full_stack.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/lib/: ws.ts  (+7 more)
xtask/: Cargo.toml
xtask/src/: util.rs
(+446 files in other folders)
