[package]
name = "sekai-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket gateway for Sekai — REST API, web dashboard, webhooks."
publish = false

[dependencies]
# Internal workspace crates
sekai-api.workspace = true
sekai-config.workspace = true
sekai-infra.workspace = true
sekai-memory.workspace = true
sekai-providers.workspace = true
sekai-channels = { workspace = true, default-features = true, features = ["channel-acp-server", "channel-email", "channel-telegram"] }
sekai-runtime.workspace = true
sekai-tools.workspace = true
sekai-hardware.workspace = true
sekai-plugins = { workspace = true, optional = true }

# HTTP server
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "macros"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout", "fs"] }
http-body-util = "0.1"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "tls12", "ring"] }

# Frontend asset MIME type detection (dashboard served from filesystem)
mime_guess = "2"
include_dir = { version = "0.7", optional = true }

# Schemars JSON Schema generation for OPTIONS responses; matches the version
# sekai-config already pulls.
schemars = { version = "1.2", optional = true }

# Async runtime
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "signal"] }
tokio-stream = { version = "0.1.18", default-features = false, features = ["sync"] }
tokio-util = { version = "0.7", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# Error handling
anyhow = "1.0"
async-trait = "0.1"
directories = "6.0"

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Database (session queue)
rusqlite = { version = "0.37", features = ["bundled"] }

# Misc
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
parking_lot = "0.12"
toml = "1.0"
toml_edit = "0.25"
tracing = { version = "0.1", default-features = false }
rustls-pemfile = "2"
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }

[dev-dependencies]
rand = "0.10"
rcgen = "0.13"
tempfile = "3.26"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }

[features]
default = ["schema-export"]
plugins-wasm = ["dep:sekai-plugins"]
webauthn = ["sekai-runtime/webauthn"]
observability-prometheus = ["sekai-runtime/observability-prometheus"]
channel-nostr = ["sekai-channels/channel-nostr"]
gateway-voice-duplex = []
# Enables OPTIONS /api/config* responses with the schemars-generated
# JSON Schema body and the serde-side schemars derives transitively. Defaults
# on; turning it off omits OPTIONS schema bodies (returns a small placeholder)
# and saves a bit of build time. Mirrors sekai-config's `schema-export`.
schema-export = ["sekai-config/schema-export", "dep:schemars"]
embedded-web = ["dep:include_dir"]
